# jobgauge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  Makefile.data-tools  NOTICE.md  README.md  pyproject.toml
.agents/skills/jobgauge-data/: SKILL.md
.claude/skills/jobgauge-data/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  update-data.yml
catalog/: sources.yml
catalog/indicators/: 01_core.yml  02_demographics.yml  03_wages_prices_productivity.yml  04_industry_state_local.yml  05_flows.yml
docs/: DATA_TOOLS_AGENT_GUIDE.md  DATA_TOOLS_ARCHITECTURE.md  FAILURE_MODES.md  REFRESH_AUTOMATION.md  STATIC_DATA_CONTRACT.md
schemas/: indicator.schema.json  static_data_contract.schema.json
scripts/: bootstrap_jobgauge_tools.sh  bootstrap_repo.sh  hygiene_check.sh  preview_static_site.sh
site/public/: README.md  index.html
site/public/assets/css/: app.css
site/public/data/: catalog.json  latest.json  manifest.json
site/public/search/: index.json
src/labor_dashboard/: __init__.py  cli.py  models.py  pipeline.py  registry.py  search_index.py  settings.py  static_export.py  transformations.py
src/labor_dashboard/io/: __init__.py  catalog.py
src/labor_dashboard/providers/: __init__.py  base.py  bea.py  bls.py  census_qwi.py  dol.py  fred.py  qcew.py
tests/: test_bls_provider.py  test_catalog.py  test_dol_provider.py  test_jobgauge_data_cli.py  test_pipeline.py  test_provider_helpers.py  test_search_index.py  test_static_export.py
tests/fixtures/: bls_timeseries.json
tools/: jobgauge_data.py
(+139 files in other folders)
