[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobgauge"
version = "0.1.0"
description = "Static U.S. labor-market dashboard and offline data pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "jobgauge contributors"}]
dependencies = [
    "duckdb>=1.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "rapidfuzz>=3.9",
    "rich>=13.7",
    "tenacity>=8.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.5",
]

[project.scripts]
labor-dashboard = "labor_dashboard.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
